Let's do this differently then - how pretty and usable can we make the VT shell without gutting hterm directly.
* render the boundary prettier
* fix the flow of subsequent commands

--- a/static/css/plush.css
+++ b/static/css/plush.css
@@ -506,8 +506,12 @@ h1,h2,h3,h4,blockquote,q,.maia-nav ul {
 }
 
 .job .output {
+  position: relative;
   padding: 0.25em 0 0.25em 1em;
   border-right: none;
+}
+.job .vtoutput {
+  padding: 0 0 0 0;
 }
 .job .stdout {
   color: #3f3f3f;
