--- a/static/css/plush.css
+++ b/static/css/plush.css
@@ -519,7 +519,7 @@ ul.horiz-menu li {
 #annotations .annotation:hover .message {
   display: block;
 }
-#annotations .completions li:focus {
+#annotations .completions li.focus {
   background-color: #c4d5ed;
   color: #000;
 }
