fixed parsing of filenames with spaces, issue 20

--- a/static/css/plush.css
+++ b/static/css/plush.css
@@ -548,6 +548,7 @@ ul.horiz-menu li {
 
 #status-ls .file .name {
   text-decoration: underline;
+  white-space: pre-wrap;
 }
 
 #status-ls .file .name.type-- {
