history search improvements
get historical items in the right order (were backwards now that we're adding in recent-to-past order)
elide duplicates during substring matches
show duplicate counts

--- a/static/css/plush.css
+++ b/static/css/plush.css
@@ -457,11 +457,16 @@ h1,h2,h3,h4,blockquote,q {
   display: inherit;
 }
 
-#history .command {
+#history pre {
   white-space: pre-wrap;
   margin: 0.5em 1.5em 0;
 }
 
+#history .count {
+  color: #777;
+  font-style: italic;
+  float: right;
+}
 #history .focus {
   background-color: #ffe;
 }
