make build version info available
get git describe info into the version object
add version display to header

--- a/static/css/plush.css
+++ b/static/css/plush.css
@@ -42,6 +42,11 @@ body {
   float: left;
   padding: 0.5em 1em 0 60px;
 }
+#header .version {
+  text-align: right;
+  position: relative;
+  top: -6px;
+}
 
 #header #header-info {
   text-align: right;
@@ -269,6 +274,16 @@ h1,h2,h3,h4,blockquote,q {
   line-height: 1.52;
   text-shadow: 0 1px 1px #fff;
   white-space: nowrap
+}
+
+#header .version {
+  font-size: 10px;
+  font-weight: normal;
+  color: #ccc;
+}
+
+#header .version:hover {
+  color: #333;
 }
 
 #header a {
