--- a/static/css/plush.css
+++ b/static/css/plush.css
@@ -612,7 +612,7 @@ ul.horiz-menu li {
   word-break: break-all;
 }
 
-#status-ls table {
+#status-dir table {
   width: 100%;
   position: relative;
   z-index: 0;
@@ -620,31 +620,49 @@ ul.horiz-menu li {
   border-collapse: collapse;
 }
 
-#status-ls .file .name {
+#status-dir .file .name {
   text-decoration: underline;
   white-space: pre-wrap;
 }
 
-#status-ls .file .name.type-- {
-  text-decoration: none;
+#status-dir .file .name.svntype-modified {
+  background-color: red;
 }
 
-#status-ls .file .name.type-d {
-  text-decoration: none;
-  font-weight: bold;
+#status-dir .file .name.svntype-added {
+  background-color: blue;
 }
 
-#status-ls .file .name.type-l {
+#status-dir .file .name.type-l {
   text-decoration: none;
   font-style: italic;
 }
 
-#status-ls td {
+#status-dir .file .name {
+  text-decoration: underline;
+  white-space: pre-wrap;
+}
+
+#status-dir .file .name.type-- {
+  text-decoration: none;
+}
+
+#status-dir .file .name.type-d {
+  text-decoration: none;
+  font-weight: bold;
+}
+
+#status-dir .file .name.type-l {
+  text-decoration: none;
+  font-style: italic;
+}
+
+#status-dir td {
   position: relative;
   padding: 0.125em;
 }
 
-#status-ls .hidden {
+#status-dir .hidden {
   position: absolute;
   top: 1.35em;
   z-index: 1;
@@ -652,25 +670,25 @@ ul.horiz-menu li {
   width: 16em;
 }
 
-#status-ls td:hover {
+#status-dir td:hover {
   background-color: rgba(254,238,124,0.75);
   padding-left: 1em;
   cursor: none;
 }
-#status-ls td .hidden { left: -9999em; }
-#status-ls td:hover .hidden { left: inherit; right: 0; }
+#status-dir td .hidden { left: -9999em; }
+#status-dir td:hover .hidden { left: inherit; right: 0; }
 
-#status-ls dl {
+#status-dir dl {
   font-size: 90%;
   margin: 1em 0;
 }
-#status-ls dl dt {
+#status-dir dl dt {
   width: 8em;
   text-align: right;
   float: left;
 }
 
-#status-ls dl dd {
+#status-dir dl dd {
   margin-left: 9em;
 }
 
@@ -720,57 +738,34 @@ ul.horiz-menu li {
   padding: 0 0 0 0.5em;
 }
 
-
-#status-vars {
-  position: absolute;
-  z-index: 0;
-  bottom: 0;
-  right: 0;
-  height: 1em;
-}
-
-#status-vars div.hidden {
-  display: none;
-  position: fixed;
-  bottom: 1em;
-  right: 1em;
-  width: 21.5em;
-  background-color: rgba(229,228,211,0.9);
-  border: 1px solid #7f7e75;
-  border-radius: 4px;
-  text-align: left;
-  padding: 0.5em 1em;
-  z-index: 100;
-}
-
 #status-vars:hover div {
   display: inherit;
 }
 
-#status-vars div p {
+#status-env div p {
   text-align: center;
   margin-top: 1em;
   margin-bottom: 1em;
 }
 
-#status-vars div dl {
+#status-env div dl {
   color: #333;
 }
 
-#status-vars div dl dt {
+#status-env div dl dt {
   width: 8em;
   text-align: right;
   float: left;
   overflow: hidden;
 }
 
-#status-vars div dl dd {
+#status-env div dl dd {
   margin-left: 9em;
   margin-bottom: 0.5em;
   word-break: break-all;
 }
 
-#status-vars div dl .ro {
+#status-env div dl .ro {
   font-style: italic;
 }
 
