--- a/static/css/plush.css
+++ b/static/css/plush.css
@@ -223,7 +223,7 @@ html {
 #prompt-picker a:hover {
   background: #cbcba3;
   text-decoration: none;
-} 
+}
 
 input#commandline {
   font-family: monospace;
@@ -329,7 +329,7 @@ h1,h2,h3,h4,blockquote,q {
 
 #header .links a {
   font-size: 80%;
-  color: #ccc; 
+  color: #ccc;
 }
 
 #header .links a:hover {
@@ -446,6 +446,8 @@ h1,h2,h3,h4,blockquote,q {
   position: relative;
   padding: 0.25em 0 0.25em 1em;
   border-right: none;
+  white-space: pre-wrap;
+  word-break: break-all;
 }
 .job .vtoutput {
   padding: 0 0 0 0;
